Pantallas de empleados

--- a/chat_ticket_1.html
+++ b/chat_ticket_1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,18 +23,19 @@
         <tr height="50"></tr>
         <tr>
             <td rowspan="3" width="200"></td>
-            <td><strong>Whisper the wolf</strong></td>
+            <td><strong>Beethoven</strong></td>
             <td align="right" colspan="3">8/12/2024</td>
         </tr>
         <tr height="25"></tr>
         <tr>
-            <td>¿Por donde viene mi pedido?</td>
+            <td>¿Cuantas quedan disponibles?</td>
         </tr>
         </table>
 
-        <table align="right" width="500">
+        <table width="100%">
         <tr height="50"></tr>
             <tr>
+                <td rowspan="3" width="700"></td>
                 <td><strong>Tu</strong></td>
                 <td align="right" colspan="3">8/12/2024</td>
                 <td rowspan="3" width="200"></td>
@@ -46,12 +47,12 @@
             </tr>
         </table>
 
-        <table align="center" width="200">
-            <tr></tr>
+        <table align="center">
+            <tr height="100"></tr>
             <tr>
-                <td><img src="" alt=""></td>
-                <td><input type="text" placeholder="Escriba"></td>
-                <td><img src="" alt=""></td>
+                <td><img src="img/agregar_imagen.PNG" alt="agregar imagen" width="50"></td>
+                <td><input type="text" placeholder="Escribe un mensaje" size="50"></td>
+                <td><img src="img/enviar.png" alt="enviar" width="40"></td>
             </tr>
         </table>
     </main>
