--- a/confirmar_eliminacion.html
+++ b/confirmar_eliminacion.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PetCare | Herramientas</title>
+    <title>PetCare | Soporte</title>
     <link rel="icon" href="img/petcare_logo.png">
 </head>
 <body>
@@ -11,26 +11,22 @@
         <table align="center" width="1000">
             <tr>
                 <td><a href="indexEmpleados.html"><img src="img/petcare_logo.png" alt="logo" title="Volver al inicio" width="90" height="90"></a></td>
-                <td width="17%"></td>
-                <td><h2>Herramientas</h2></td>
+                <td width="19%"></td>
+                <td><h2><a href="indexEmpleados.html"><font color="#000000">Herramientas</font></a> / Soporte</h2></td>
                 <td align="right"><a href="index.html"><h2><font color="#73BF50">Salir</font></h2></a></td>
                 <td width="25" align="right"></td>
             </tr>
         </table>
     </header>
     <main>
-        <table width="200" align="center">
+        <table align="center">
             <tr height="100"></tr>
-            <tr>
-                <td align="center" bgcolor="73BF50"><a href="soporte.html"><h3><font color="#ffffff">Soporte</font></h3></a></td>
-            </tr>
+            <tr align="center"><td colspan="2"><h3>Los elementos que has seleccionado se <br> eliminarán de forma permanente</h3></td></tr>
+            <tr align="center"><td colspan="2"><h3>¿Deseas continuar?</h3></td></tr>
             <tr height="25"></tr>
             <tr>
-                <td align="center" bgcolor="73BF50"><a href="inventario.html"><h3><font color="#ffffff">Inventario</font></h3></a></td>
-            </tr>
-            <tr height="25"></tr>
-            <tr>
-                <td align="center" bgcolor="73BF50"><a href="empleados.html"><h3><font color="#ffffff">Empleados</font></h3></a></td>
+                <td><a href="Eliminar_producto.html"><font color="#73BF50"><h3>Cancelar</h3></font></a></td>
+                <td bgcolor="#73BF50" align="center"><a href="inventario.html"><font color="#ffffff"><h3>Confirmar</h3></font></a></td>
             </tr>
         </table>
     </main>
