--- a/camas.html
+++ b/camas.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,18 +8,17 @@
 </head>
 <body>
     <main>
-         <table width="1340" align="center">
-            <tr>
-                
-                <th><a href="#"><img src="img/petcare_logo.png" alt="PetCareLogo" width="90" height="90"></a></th>
-                <th><a href="#"><font color="#73BF50">Camas</font></a></th>
-                <th><a href="#"><font color="#73BF50">Comidas</font></a></th>
-                <th><a href="#"><font color="#73BF50">Juguetes</font></a></th>
-                <th><a href="#"><font color="#73BF50">Accesorios</font></a></th>
-                <th><a href="#"><font color="#73BF50">Medicamentos</font></a></th>
-                <th><a href="#"><font color="#73BF50">Soporte</font></a></th>
-                <th><a href="#"><img src="img/User.png" alt="Usuario" width="50" height="50"></a></th>
-                <th><a href="#"><img src="img/cart.png" alt="Carrito" width="50" height="50"></a></th>
+        <table width="100%">
+            <tr>  
+                <th><a href="index.html"><img src="img/petcare_logo.png" alt="PetCareLogo" width="90" height="90"></a></th>
+                <th><a href="#"><font color="#73BF50"><h3>Camas</h3></font></a></th>
+                <th><a href="#"><font color="#73BF50"><h3>Comidas</h3></font></a></th>
+                <th><a href="#"><font color="#73BF50"><h3>Juguetes</h3></font></a></th>
+                <th><a href="#"><font color="#73BF50"><h3>Accesorios</h3></font></a></th>
+                <th><a href="#"><font color="#73BF50"><h3>Medicamentos</h3></font></a></th>
+                <th><a href="#"><font color="#73BF50"><h3>Soporte</h3></font></a></th>
+                <th><a href="#"><img src="img/User.png" alt="Usuario" width="35" height="35"></a></th>
+                <th><a href="#"><img src="img/cart.png" alt="Carrito" width="35" height="35"></a></th>
             </tr>
         </table>
         <table width="250">
@@ -42,7 +41,7 @@
         <table width="1340" align="center" >
             <tr>
                 <th width="150"></th>
-                <th width="200"><a href="#"><img src="img/Camaazul6.webp" alt="Azul" width="100%" height="100%"></a></th>
+                <th width="200"><a href="camaazul.html"><img src="img/Camaazul6.webp" alt="Azul" width="100%" height="100%"></a></th>
                 <th width="150"></th>
                 <th width="200"><a href="#"><img src="img/Camacafe1.webp" alt="Cafe" width="100%" height="100%"></a></th>
                 <th width="150"></th>
