--- a/registro.html
+++ b/registro.html
@@ -24,7 +24,7 @@
     <main>
         <table align="center">
             <tr height="50"></tr>
-            <tr align="center"><td colspan="3"><h3>Inicio de sesión</h3></td></tr>
+            <tr align="center"><td colspan="3"><h3>Crear cuenta</h3></td></tr>
             <tr align="center"><td colspan="3"><input type="text" placeholder="Nombre o Email" size="50"></td></tr>
             <tr height="15"></tr>
             <tr align="center"><td colspan="3"><input type="password" placeholder="Contraseña" size="50"></td></tr>
@@ -32,7 +32,7 @@
             <tr height="25"></tr>
             <tr align="center">
                 <td width="150"></td>
-                <td bgcolor="#73BF50"><a href=""><font color="white"><h3>Iniciar sesión</h3></font></a></td>
+                <td bgcolor="#73BF50"><a href=""><font color="white"><h3>Crear cuenta</h3></font></a></td>
                 <td width="150"></td>
             </tr>
             <tr height="25"></tr>
