--- a/camaazul.html
+++ b/camaazul.html
@@ -11,14 +11,14 @@
         <table width="100%">
             <tr>  
                 <th><a href="#"><img src="img/petcare_logo.png" alt="PetCareLogo" width="90" height="90"></a></th>
-                <th><a href="#"><font color="#73BF50"><h3>Camas</h3></font></a></th>
-                <th><a href="#"><font color="#73BF50"><h3>Comidas</h3></font></a></th>
-                <th><a href="#"><font color="#73BF50"><h3>Juguetes</h3></font></a></th>
-                <th><a href="#"><font color="#73BF50"><h3>Accesorios</h3></font></a></th>
-                <th><a href="#"><font color="#73BF50"><h3>Medicamentos</h3></font></a></th>
-                <th><a href="#"><font color="#73BF50"><h3>Soporte</h3></font></a></th>
-                <th><a href="#"><img src="img/User.png" alt="Usuario" width="35" height="35"></a></th>
-                <th><a href="#"><img src="img/cart.png" alt="Carrito" width="35" height="35"></a></th>
+                <th><a href="camas.html"><font color="#73BF50"><h3>Camas</h3></font></a></th>
+                <th><a href="Comida.html"><font color="#73BF50"><h3>Comidas</h3></font></a></th>
+                <th><a href="Juguetes.html"><font color="#73BF50"><h3>Juguetes</h3></font></a></th>
+                <th><a href="accesorio.html"><font color="#73BF50"><h3>Accesorios</h3></font></a></th>
+                <th><a href="medicamentos.html"><font color="#73BF50"><h3>Medicamentos</h3></font></a></th>
+                <th><a href="soporte_usuario.html"><font color="#73BF50"><h3>Soporte</h3></font></a></th>
+                <th><a href="iniciar_sesion.html"><img src="img/User.png" alt="Usuario" width="35" height="35"></a></th>
+                <th><a href="carrito.html"><img src="img/cart.png" alt="Carrito" width="35" height="35"></a></th>
             </tr>
         </table>
 
