--- a/crear_cuenta.html
+++ b/crear_cuenta.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>PetCare | Iniciar sesión</title>
+    <title>PetCare | Crear cuenta</title>
     <link rel="icon" href="img/petcare_logo.png">
 </head>
 <body>
@@ -24,20 +24,24 @@
     <main>
         <table align="center">
             <tr height="50"></tr>
-            <tr align="center"><td colspan="3"><h3>Inicio de sesión</h3></td></tr>
-            <tr align="center"><td colspan="3"><input type="text" placeholder="Nombre o Email" size="50"></td></tr>
-            <tr height="15"></tr>
+            <tr align="center"><td colspan="3"><h3>Crear cuenta</h3></td></tr>
+            <tr align="center"><td colspan="3"><input type="text" placeholder="Nombre" size="50"></td></tr>
+            <tr height="10"></tr>
+            <tr align="center"><td colspan="3"><input type="text" placeholder="Apellido" size="50"></td></tr>
+            <tr height="10"></tr>
+            <tr align="center"><td colspan="3"><input type="email" placeholder="Correo" size="50"></td></tr>
+            <tr height="10"></tr>
             <tr align="center"><td colspan="3"><input type="password" placeholder="Contraseña" size="50"></td></tr>
-            <tr height="15"></tr>
-            <tr><td colspan="3">Al continuar, aceptas las Condiciones de uso y el Aviso de privacidad de PetCare.</td></tr>
+            <tr height="10"></tr>
+            <tr align="center"><td colspan="3"><input type="password" placeholder="Confirmar Contraseña" size="50"></td></tr>
             <tr height="25"></tr>
             <tr align="center">
                 <td width="150"></td>
-                <td bgcolor="#73BF50"><a href="cuenta.html"><font color="white"><h3>Iniciar sesión</h3></font></a></td>
+                <td bgcolor="#73BF50" width="150"><a href="iniciar_sesion.html"><font color="white"><h3>Crear cuenta</h3></font></a></td>
                 <td width="150"></td>
             </tr>
             <tr height="25"></tr>
-            <tr align="center"><td colspan="3">¿No tienes cuenta? <a href="crear_cuenta.html">Crea una</a></td></tr>
+            <tr align="center"><td colspan="3">¿Ya tienes cuenta? <a href="iniciar_sesion.html">Inicia sesión</a></td></tr>
             <tr height="70"></tr>
         </table>
     </main>
