--- a/camaazul.html
+++ b/camaazul.html
@@ -24,7 +24,7 @@
 
         <table width="1340" height="500" align="center" border="1px;solid black">
             <tr>
-                <td><a href="camaazul.html"><img src="img/Camaazul6.webp" alt="Azul" width="50" height="50"></a></td>
+                <td><a href="camaazul.html"><img src="img/Camaazul6.webp" alt="Azul" width="50%" height="50%"></a></td>
                 <th rowspan="7"><h1>Cama Azul</h1></th>
             </tr>
         </table>
@@ -58,17 +58,55 @@
                 <th></th>
             </tr>
         </table>
-        <table>
+        <table width="350">
             <tr>
                 <th><h2>Reseñas de clientes</h2></th>
             </tr>
         </table>
-        <table>
-                <th><img src="img/Estrellas.png" alt="Star Butterfly" width="50" height="50"></th>
-                <th><sup>5.00 de 5</sup></th>
-                <th>Escribir una reseña</th>
+        <table width="1340" >
+                <th width="70"></th>
+                <th width="100"><img src="img/Estrellas.png" alt="Star Butterfly" width="100%" height="100%"></th>
+                <th width="50"><sup>5.00 de 5</sup></th>
+                <th width="350"></th>
+                <th width="100" align="center" bgcolor="#0AA6A6"><a href="#"><font color="#ffffff">Escribir una reseña</font></a></th>
+                <th></th>
+            </tr>
+        </table>
+        <table width="300">
+            <tr>
+                <td align="center">Basado en 1 Reseñas</td>
+            </tr>
+        </table>
+        <br>
+        <br>
+        <br>
+        <br>
+        <table width="1340" >
+                <th width="70"></th>
+                <th width="100"><img src="img/Estrellas.png" alt="Star Butterfly" width="100%" height="100%"></th>
+                <th width="50"><sup></sup></th>
+                <th width="350"></th>
+                <th width="100" align="center">8/12/2024</th>
+                <th></th>
+            </tr>
+        </table>
+        <table width="400" >
+            <tr>
+                <th  width="120" align="right"><img src="img/Persona.png" alt="Persona 5" width="50" height="50"></th>
+                <th width="100" align="center">Brian Griffin</th>
+                <th width=""></th>
+            </tr>
+        </table>
+        <table width="250">
+            <tr>
+                <td align="center">Me encanta!!</td>
             </tr>
         </table>
     </aside>
+    <br>
+    <br>
+    <br>
+    <br>
+    <footer align="center">&copy;Todos los derechos recervados by PetCare</footer>
 </body>
 </html>
