--- a/camaazul.html
+++ b/camaazul.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PetCare | Camas | CamaAzul</title>
+    <title>PetCare | Camas</title>
     <link rel="icon" href="img/petcare_logo.png">
 </head>
 <body>
@@ -21,54 +21,64 @@
                 <th><a href="carrito.html"><img src="img/cart.png" alt="Carrito" width="35" height="35"></a></th>
             </tr>
         </table>
-
-        <table width="1340" height="500" align="center" border="1px;solid black">
+        <table width="250">
             <tr>
-                <td><a href="camaazul.html"><img src="img/Camaazul6.webp" alt="Azul" width="50" height="50"></a></td>
-                <th rowspan="7"><h1>Cama Azul</h1></th>
+                <th>
+                    <h1>Camas</h1>
+                </th>
             </tr>
         </table>
-    </main>
-    <aside>
-        <table width="400">
+        <table width="400" >
             <tr>
-                <th align="center"><h1>Tambien Podria Gustarte</h1></th>
+                <td width="60"></td>
+                <td width="20">Filtrar:</td>
+                <td width="20">Disponibilidad\/</td>
+                <td width="20">Precio\/</td>
             </tr>
         </table>
-        <table width="1340" >
+        <br>
+        <br>
+        <table width="1340" align="center" >
             <tr>
-                <td align="center"><a href="#"><img src="img/Camacafe1.webp" alt="Croc" width="200" height="200"></a></td>
-              
-                <td align="center"><img src="img/CamaGris4.webp" alt="Croc" width="200" height="200"></td>
- 
-                <td align="center"><a href="#"><img src="img/cojines2.webp" alt="Croc" width="200" height="200"></a></td>
+                <th width="150"></th>
+                <th width="200"><a href="camaazul.html"><img src="img/Camaazul6.webp" alt="Azul" width="100%" height="100%"></a></th>
+                <th width="150"></th>
+                <th width="200"><a href="#"><img src="img/Camacafe1.webp" alt="Cafe" width="100%" height="100%"></a></th>
+                <th width="150"></th>
+                <th width="200"><a href="#"><img src="img/cojines2.webp" alt="Cojines" width="100%" height="100%"></a></th>
+                <th></th>
+            </tr>
+        </table>
+         <table width="1340" align="center" >
+            <tr>
+                <th width="90"></th>
+                <th width="200">Cama Azul</a></th>
+                <th width="150"></th>
+                <th width="200">Cama Cafe</th>
+                <th width="170"></th>
+                <th width="300">Cojín de Repuesto para la Cama</th>
+                <th></th>
             </tr>
         </table>
         <table width="1340">
             <tr>
-                <th width="120"></th>
-                <th width="100" align="left">Cama Cafe</th>
-                <th width="150"  align="left">$3,740.00 RD</th>
-                <th width="180"></th>
-                <th width="110" align="left">Cama Gris</th>
-                <th width="150" align="left">$2,000.00 RD</th>
-                <th width="175"></th>
-                <th width="110" align="left">Cojines</th>
-                <th width="150" align="left">$2,500.00 RD</th>
+                <th width="140"></th>
+                <th width="200">A partir de $ 3,000.00 RD</a></th>
+                <th width="150"></th>
+                <th width="200">A partir de $ 3,740.00 RD</th>
+                <th width="95"></th>
+                <th width="300">A partir de $ 2,500.00 RD</th>
                 <th></th>
             </tr>
         </table>
-        <table>
-            <tr>
-                <th><h2>Reseñas de clientes</h2></th>
-            </tr>
-        </table>
-        <table>
-                <th><img src="img/Estrellas.png" alt="Star Butterfly" width="50" height="50"></th>
-                <th><sup>5.00 de 5</sup></th>
-                <th>Escribir una reseña</th>
-            </tr>
-        </table>
-    </aside>
+    </main>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <footer align="center">&copy;Todos los derechos recervados by PetCare</footer>
 </body>
 </html>
