--- a/camaazul.html
+++ b/camaazul.html
@@ -22,15 +22,32 @@
             </tr>
         </table>
 
-        <table width="1340" height="500" align="center" border="1px;solid black">
+        <table width="650" align="center">
             <tr>
-                <td><a href="camaazul.html"><img src="img/Camaazul6.webp" alt="Azul" width="50%" height="50%"></a></td>
-                <th rowspan="7"><h1>Cama Azul</h1></th>
+                <td rowspan="14" width="400"><a href="camaazul.html"><img src="img/Camaazul6.webp" alt="Azul" width="400"></a></td>
+                <td rowspan="14" width="50"></td>
             </tr>
+            <tr height="50"></tr>
+            <tr><th colspan="2" align="left "><h3>Cama Azul</h3></th></tr>
+            <tr height="10"></tr>
+            <tr><td colspan="2">$ 3,000 RD</td></tr>
+            <tr height="10"></tr>
+            <tr><td colspan="2"><strong>Size</strong></td></tr>
+            <tr align="center">
+                <td bgcolor="#73BF50" height="35"><font color="white">Medium</font></td>
+                <td><font color="#73BF50"><strong>Large</strong></font></td>
+            </tr>
+            <tr height="25"></tr>
+            <tr><td colspan="2"><strong>Cantidad</strong></td></tr>
+            <tr><td colspan="2">- 1 +</td></tr>
+            <tr height="25"></tr>
+            <tr align="center" colspan="2"><td bgcolor="#0AA6A6"><font color="white">Añadir al carrito</font></td></tr>
+            <tr height="50"></tr>
         </table>
     </main>
     <aside>
         <table width="400">
+            <tr height="50"></tr>
             <tr>
                 <th align="center"><h1>Tambien Podria Gustarte</h1></th>
             </tr>
@@ -59,6 +76,7 @@
             </tr>
         </table>
         <table width="350">
+            <tr height="50"></tr>
             <tr>
                 <th><h2>Reseñas de clientes</h2></th>
             </tr>
