--- a/iniciar_sesion.html
+++ b/iniciar_sesion.html
@@ -9,7 +9,7 @@
     <header>
         <table width="100%">
             <tr>  
-                <th><a href="#"><img src="img/petcare_logo.png" alt="PetCareLogo" width="90" height="90"></a></th>
+                <th><a href="index.html"><img src="img/petcare_logo.png" alt="PetCareLogo" width="90" height="90"></a></th>
                 <th><a href="camas.html"><font color="#73BF50"><h3>Camas</h3></font></a></th>
                 <th><a href="Comida.html"><font color="#73BF50"><h3>Comidas</h3></font></a></th>
                 <th><a href="Juguetes.html"><font color="#73BF50"><h3>Juguetes</h3></font></a></th>
