--- a/camaazul.html
+++ b/camaazul.html
@@ -10,7 +10,7 @@
     <main>
         <table width="100%">
             <tr>  
-                <th><a href="index.html"><img src="img/petcare_logo.png" alt="PetCareLogo" width="90" height="90"></a></th>
+                <th><a href="#"><img src="img/petcare_logo.png" alt="PetCareLogo" width="90" height="90"></a></th>
                 <th><a href="camas.html"><font color="#73BF50"><h3>Camas</h3></font></a></th>
                 <th><a href="Comida.html"><font color="#73BF50"><h3>Comidas</h3></font></a></th>
                 <th><a href="Juguetes.html"><font color="#73BF50"><h3>Juguetes</h3></font></a></th>
@@ -24,8 +24,18 @@
 
         <table width="650" align="center">
             <tr>
-                <td><a href="camaazul.html"><img src="img/Camaazul6.webp" alt="Azul" width="50" height="50"></a></td>
-                <th rowspan="7"><h1>Cama Azul</h1></th>
+                <td rowspan="14" width="400"><a href="camaazul.html"><img src="img/Camaazul6.webp" alt="Azul" width="400"></a></td>
+                <td rowspan="14" width="50"></td>
+            </tr>
+            <tr height="50"></tr>
+            <tr><th colspan="2" align="left "><h3>Cama Azul</h3></th></tr>
+            <tr height="10"></tr>
+            <tr><td colspan="2">$ 3,000 RD</td></tr>
+            <tr height="10"></tr>
+            <tr><td colspan="2"><strong>Size</strong></td></tr>
+            <tr align="center">
+                <td bgcolor="#73BF50" height="35"><font color="white">Medium</font></td>
+                <td><font color="#73BF50"><strong>Large</strong></font></td>
             </tr>
             <tr height="25"></tr>
             <tr><td colspan="2"><strong>Cantidad</strong></td></tr>
@@ -65,7 +75,8 @@
                 <th></th>
             </tr>
         </table>
-        <table>
+        <table width="350">
+            <tr height="50"></tr>
             <tr>
                 <th><h2>Reseñas de clientes</h2></th>
             </tr>
