--- a/cuenta.html
+++ b/cuenta.html
@@ -21,9 +21,22 @@
                 <th><a href="carrito.html"><img src="img/cart.png" alt="Carrito" width="35" height="35"></a></th>
             </tr>
         </table>
-        <figure>
-            <img src="img/Flanders.jpg" alt="Nada_de_Nada">
-        </figure>
+        <table width="600" align="center">
+            <tr height="50"></tr>
+            <tr>
+                <td><h2>Cuenta</h2></td>
+                <td align="right"><font color="#73BF50"><strong>Detalles de la cuenta</strong></font></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td align="right"><a href="index.html"><font color="#73BF50"><strong>Cerrar sesión</strong></font></a></td>
+            </tr>
+            <tr></tr>
+            <tr><td><h3>Historial de pedidos</h3></td></tr>
+            <tr><td>No has realizado pedidos</td></tr>
+            <tr height="250"></tr>
+        </table>
     </main>
+    <footer align="center">&copy;Todos los derechos recervados by PetCare</footer>
 </body>
 </html>
