--- a/Comida.html
+++ b/Comida.html
@@ -41,7 +41,7 @@
         <table width="1340" align="center" >
             <tr>
                 <th width="150"></th>
-                <th width="200"><a href="#"><img src="img/MixSeniorNuevo.webp" alt="Azul" width="100%" height="100%"></a></th>
+                <th width="200"><a href="mixsenior.html"><img src="img/MixSeniorNuevo.webp" alt="Azul" width="100%" height="100%"></a></th>
                 <th width="150"></th>
                 <th width="200"><a href="#"><img src="img/MixDental.webp" alt="Cafe" width="100%" height="100%"></a></th>
                 <th width="150"></th>
