--- a/medicamentos.html
+++ b/medicamentos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PetCare | Comida</title>
+    <title>PetCare | Medicamentos</title>
     <link rel="icon" href="img/petcare_logo.png">
 </head>
 <body>
@@ -21,6 +21,64 @@
                 <th><a href="carrito.html"><img src="img/cart.png" alt="Carrito" width="35" height="35"></a></th>
             </tr>
         </table>
+        <table width="250">
+            <tr>
+                <th>
+                    <h1>Medicamentos</h1>
+                </th>
+            </tr>
+        </table>
+        <table width="400" >
+            <tr>
+                <td width="60"></td>
+                <td width="20">Filtrar:</td>
+                <td width="20">Disponibilidad\/</td>
+                <td width="20">Precio\/</td>
+            </tr>
+        </table>
+        <br>
+        <br>
+        <table width="1340" align="center" >
+            <tr>
+                <th width="150"></th>
+                <th width="200"><a href="#"><img src="img/vet1.png" alt="Azul" width="100%" height="100%"></a></th>
+                <th width="150"></th>
+                <th width="200"><a href="#"><img src="img/vet2.png" alt="Cafe" width="100%" height="100%"></a></th>
+                <th width="150"></th>
+                <th width="200"><a href="#"><img src="img/vet3.png" alt="Cojines" width="100%" height="100%"></a></th>
+                <th></th>
+            </tr>
+        </table>
+         <table width="1340" align="center" >
+            <tr>
+                <th width="90"></th>
+                <th width="200">Nexgard Spectra L</a></th>
+                <th width="150"></th>
+                <th width="200">SIMPARICA 40 MG CAJA 1 TABLETA</th>
+                <th width="170"></th>
+                <th width="300">Simparica 20mg</th>
+                <th></th>
+            </tr>
+        </table>
+        <table width="1340">
+            <tr>
+                <th width="140"></th>
+                <th width="200">A partir de $ 3,000.00 RD</a></th>
+                <th width="150"></th>
+                <th width="200">A partir de $ 3,740.00 RD</th>
+                <th width="95"></th>
+                <th width="300">A partir de $ 2,500.00 RD</th>
+                <th></th>
+            </tr>
+        </table>
     </main>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <footer align="center">&copy;Todos los derechos recervados by PetCare</footer>
 </body>
 </html>
