--- a/editar_cuenta.html
+++ b/editar_cuenta.html
@@ -1,13 +1,12 @@
-<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PetCare | Comida</title>
+    <title>PetCare | Cuenta | Editar empleados</title>
     <link rel="icon" href="img/petcare_logo.png">
 </head>
 <body>
-    <main>
+    <header>
         <table width="100%">
             <tr>  
                 <th><a href="index.html"><img src="img/petcare_logo.png" alt="PetCareLogo" width="90" height="90"></a></th>
@@ -21,22 +20,37 @@
                 <th><a href="carrito.html"><img src="img/cart.png" alt="Carrito" width="35" height="35"></a></th>
             </tr>
         </table>
-        <table width="600" align="center">
-            <tr height="50"></tr>
+    </header>
+    <main>
+        <table align="center">
+            <tr height="20"></tr>
             <tr>
-                <td><h2>Cuenta</h2></td>
-                <td align="right"><a href="detalles_cuenta.html"><font color="#73BF50"><strong>Detalles de la cuenta</strong></font></a></td>
+                <td rowspan="7"><img src="img/circulo_editar_imagen.png" width="200" title="Agregar imagen"></td>
+                <td rowspan="7" width="50"></td>
+                <td height="50"></td>
             </tr>
             <tr>
-                <td></td>
-                <td align="right"><a href="index.html"><font color="#73BF50"><strong>Cerrar sesión</strong></font></a></td>
+                <td colspan="2"><strong>Nombre:</strong> Winnar Peralta</td>
+                <td><img src="img/editar.png" alt="" width="25"></td>
             </tr>
-            <tr></tr>
-            <tr><td><h3>Historial de pedidos</h3></td></tr>
-            <tr><td>No has realizado pedidos</td></tr>
-            <tr height="250"></tr>
+            <tr>
+                <td colspan="2"><strong>Correo:</strong> winnarperalta3@gmail.com</td>
+                <td><img src="img/editar.png" alt="" width="25"></td>
+            </tr>
+            <tr>
+                <td colspan="2"><strong>Contraseña:</strong> 123454321</td>
+                <td><img src="img/editar.png" alt="" width="25"></td>
+            </tr>
+            <tr><td height="50"></td></tr>
+        </table>
+        
+        <table align="center" width="250">
+            <tr height="25"></tr>
+            <tr>
+                <td align="center" height="50"><a href="detalles_cuenta.html"><font color="#73BF50"><strong>Cancelar</strong></font></a></td>
+                <td align="center" bgcolor="#73BF50"><a href="detalles_cuenta.html"><font color="#ffffff"><strong>Confirmar</strong></font></a></td>
+            </tr>
         </table>
     </main>
-    <footer align="center">&copy;Todos los derechos recervados by PetCare</footer>
 </body>
 </html>
