--- a/editar_empleado.html
+++ b/editar_empleado.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PetCare | Cama azul</title>
+    <title>Empleados | Editar empleados</title>
     <link rel="icon" href="img/petcare_logo.png">
 </head>
 <body>
