--- a/medicamentos.html
+++ b/medicamentos.html
@@ -41,7 +41,7 @@
         <table width="1340" align="center" >
             <tr>
                 <th width="150"></th>
-                <th width="200"><a href="#"><img src="img/vet1.png" alt="Azul" width="100%" height="100%"></a></th>
+                <th width="200"><a href="nexgard.html"><img src="img/vet1.png" alt="Azul" width="100%" height="100%"></a></th>
                 <th width="150"></th>
                 <th width="200"><a href="#"><img src="img/vet2.png" alt="Cafe" width="100%" height="100%"></a></th>
                 <th width="150"></th>
